[gd_scene load_steps=17 format=2]

[ext_resource path="res://gameobjects/Generator.gd" type="Script" id=1]
[ext_resource path="res://fonts/scribbles.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/themes/hint_object_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/ui_bar.gd" type="Script" id=4]
[ext_resource path="res://raw_assets/models/metastabilizer.glb" type="PackedScene" id=5]
[ext_resource path="res://item/item_deposit/ItemDeposit.tscn" type="PackedScene" id=6]
[ext_resource path="res://item/items/bio_fuel.tres" type="Resource" id=7]

[sub_resource type="BoxShape" id=1]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 0.768627, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Info/VBoxContainer/ProgressBar/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info/VBoxContainer/ProgressBar:custom_styles/bg:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Info/VBoxContainer/ProgressBar:custom_styles/fg:bg_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.768627, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Info/VBoxContainer/Name:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Info/VBoxContainer/ProgressBar/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info/VBoxContainer/ProgressBar:custom_styles/bg:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.196078 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Info/VBoxContainer/ProgressBar:custom_styles/fg:bg_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.768627, 0, 0, 0 ), Color( 0.768627, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Info/VBoxContainer/Name:custom_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="BoxShape" id=8]

[sub_resource type="BoxShape" id=9]

[node name="Generator" type="StaticBody"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )
fuel_item_data = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="metastabilizer" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Info" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -69.0
margin_right = 208.0
margin_bottom = 69.0

[node name="Name" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_right = 416.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_fonts/font = SubResource( 2 )
text = "generator"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Info/VBoxContainer"]
margin_top = 71.0
margin_right = 416.0
margin_bottom = 138.0
rect_min_size = Vector2( 400, 50 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
script = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/Info/VBoxContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 0 )
custom_fonts/font = SubResource( 5 )
text = "fuel"
align = 1
valign = 1

[node name="FuelConsumeTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasLayer")
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 7 )

[node name="ItemDeposit" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape" type="CollisionShape" parent="ItemDeposit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1 )
shape = SubResource( 8 )

[node name="CheckForMachinesArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape" type="CollisionShape" parent="CheckForMachinesArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 9 )

[connection signal="timeout" from="FuelConsumeTimer" to="." method="_on_FuelConsumeTimer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]
